# px4_drone

./: Custom_Quadcoptor_Design_Draft1.FCStd  Drone_Software_Package_Containerization_Blueprint.canvas  README.md  drone.canvas
avoidance/launch/: avoidance_sitl_mavros.launch
avoidance/sim/worlds/: cyberzoo.world  moving_boxes.world
drone_base_model/x500/: model.sdf  x500.urdf
drone_controller/: __init__.py  x500_env_cfg.py
drone_controller/config/agents/: rl_games_ppo_cfg.yaml  rsl_rl_ppo_cfg.py
drone_controller/custom_isaaclab_scripts/: rotor_force_actions.py  teleop_agent.py
drone_controller/mdp/: __init__.py  rewards.py  terminations.py
drone_test/: CMakeLists.txt
drone_test/src/: off_board.cpp
drone_ws/src/local_planner/cfg/: LocalPlannerNode.cfg
drone_ws/src/local_planner/launch/: avoidance.launch  avoidance.launch.save
drone_ws/src/local_planner/resource/: px4_config.yaml  rqt_param_toggle.sh
drone_ws/src/octomapping_test/: CMakeLists.txt  package.xml
drone_ws/src/octomapping_test/rviz/: octomap.rviz
drone_ws/src/sim_bridger/: CMakeLists.txt  package.xml
drone_ws/src/tools/: generate_launchfile.sh
fuel_planner/exploration_manager/launch/: exploration.launch  px4_explore.launch  simulator.xml
local_planner/cfg/: LocalPlannerNode.cfg
local_planner/launch/: local_planner_depth-camera.launch
local_planner/resource/: local_planner.rviz
map_gen_realsense/: CMakeLists.txt  package.xml
map_gen_realsense/src/: map_gen_realsense.cpp
pcd_saver/: CMakeLists.txt  package.xml
pcd_saver/src/: pcd_saver.cpp
pid_tune/pid_tune/launch/: pid_tune_diff.launch.py
px4_drone/drone_test/: package.xml
px4_drone/drone_test/src/: off_board.cpp
swift_pico/: CMakeLists.txt
swift_pico/launch/: task_1b.launch.py
swift_pico/src/: pico_controller.cpp  pico_tf.cpp  position_pid_controller.cpp
(+4 files in other folders)
